# qmlplugin

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp  main.qml
interface/: CMakeLists.txt  PluginIf.h
plugin/: CMakeLists.txt  MySingleton.qml  OtherThing.qml  Plugin.h  hello.qml  plugin.cpp  plugin.qrc  qmldir
